修改最近更新，搜索接口类和数据库脚本相关代码。